<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/action_theme"
        android:orderInCategory="0"
        android:title="@string/theme_settings"
        android:icon="@drawable/ic_dark_mode_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/title_settings"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save_logs"
        android:orderInCategory="2"
        android:title="@string/save_logs"
        app:showAsAction="never" />

</menu>
